# Wheatley-Tester-python

./: .gitignore  OpeningBook.txt  README.md  build.sh  main.py  main_raw.py  pyproject.toml
src/wheatley_tester/: main.py  opening_generator.py
