[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wheatley_tester"]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"

[project]
name = "wheatley_tester"
version = "0.1.0"
dependencies = [
    "chess",
]

[project.scripts]
integration-test = "wheatley_tester.main:main"
generate-openings = "wheatley_tester.opening_generator:main"

[project.optional-dependencies]
dev = ["black", "isort", "ruff", "mypy"]